VNMGDC-60 fix broken layout at SWS PDP

--- a/app/code/Amore/PointsIntegration/view/frontend/web/css/source/_module.less
+++ b/app/code/Amore/PointsIntegration/view/frontend/web/css/source/_module.less
@@ -98,10 +98,15 @@
                     font-weight: @font-weight__bold;
                 }
             }
+            > .switch {
+                height: 100% !important;
+            }
         }
 
         .item.content {
             border: 1px solid @border-color__base;
+            float: right;
+            margin-left: -100%;
         }
     }
 
